Kubernates/Ingress/ingress-green.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: green-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/rewrite-target: / 
spec:
  rules:
  - host: example.com
    http:
      paths:
      - backend:     
          service:
            name: myapp-green-service
            port:
              number: 80
        path: /admin
        pathType: ImplementationSpecific
